2004-07-15  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap/camel-imap-folder.c (imap_transfer_online): Don't
	grab the connect_lock before calling refresh_info so that we avoid
	the deadlock in bug #61551.

2004-07-14  Jeffrey Stedfast  <fejj@novell.com>

	Fix for bug #61538

	* camel-process.c (camel_process_fork): Same.

	* camel-filter-driver.c (pipe_to_system): Fixed strings

2004-07-12 Sivaiah Nallagatla <snallagatla@novell.com>

	* providers/groupwise/camel-gw-listener.c (add_esource)
	(modify_esource, add_addressbook_source)
	(modify_addressbook_sources): pass "use_ssl" value to these
	functions and set it on e-source
	(add_calendar_tasks_source): read the "use_ssl" param from camel
	url and pass it to add_esource) calls
	(get_addressbook_names_from_server): use "https" or http depending
	upon whther ssl is enabled or not
	(account_changed): compare urls from account instead of uris
	formed to know wheter somehting in the account changed

2004-07-09  Not Zed  <NotZed@Ximian.com>

	** This is no guarantee of security, but its just a helper to
	prevent old memory accidentally being included/used elsewhere.
	
	* camel-smime-context.c (sm_decrypt): mark the output stream
	'secure'.

	* camel-gpg-context.c (gpg_decrypt): set the output stream to
	secured, so we automagically blank it out on finalise.

	* camel-stream-mem.c (camel_stream_mem_set_secure): set the
	memory-stream 'secured', all we do at the moment is blank out the
	buffer on finalise.
	(camel_stream_mem_set_byte_array, camel_stream_mem_finalize):
	clear memory if owner and secured.  kill dead comment.
	(clear_mem): utilitiy to set memory to 0xABADF00D

2004-07-08  Not Zed  <NotZed@Ximian.com>

	** See bug #61186.
	
	* camel-cipher-context.c (camel_cipher_sign):
	(camel_cipher_verify, camel_cipher_encrypt, camel_cipher_decrypt):
	Add preliminary progress reporting.

2004-07-07  Chris Toshok  <toshok@ximian.com>

	* providers/groupwise/Makefile.am (INCLUDES): use
	CAMEL_GROUPWISE_CFLAGS.